src/component/Calculator/Calculator.css
body {
  background: #ebe9e9;
}

.container {
  margin: 0 10em 0 10em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.calculator {
  padding: 0.2em;
  border: 1px solid #fff;
  background: #fff;
  margin: 5.2em;
}

.title {
  display: flex;
  align-items: center;
}

.title img {
  width: 2.5em;
  height: auto;
  align-items: flex-start;
}

.title h1 {
  color: #cbc9c9ea;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: x-large;
  margin: 0;
}

/* .screen {
    border: 2px solid #000;
} */

.screen input {
  width: 100%;
  height: 2.5em;
  border: 0;
  text-align: right;
}

.screen input:hover {
  cursor: default;
}

.screen input:nth-child(1) {
  font-size: 2em;
  color: #777;
}

.screen input:nth-child(2) {
  font-size: 3em;
  color: #000;
}

.screen input:focus {
  outline: none !important;
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.buttons .mainButtons input,
.buttons .advancedButtons input {
  width: 5em;
  height: 2.5em;
  font-size: 1.8em;
}

.buttons .mainButtons input:focus,
.buttons .advancedButtons input:focus {
  outline: none !important;
}

.buttons .mainButtons .numericButton {
  background: #fff;
  border: 0;
}

.buttons .mainButtons .numericButton:focus,
.buttons .mainButtons .numericButton:hover {
  background: #eee;
}

.buttons .mainButtons .operatorButton {
  background: #ff8100e0;
  border: 0;
  color: #fff;
}

.buttons .mainButtons .operatorButton:focus,
.buttons .mainButtons .operatorButton:hover {
  background: #f07800;
}

.buttons .advancedButtons .scientificButton {
  background: #eee;
  border: 0;
  color: #000;
}

.buttons .advancedButtons .scientificButton:focus,
.buttons .advancedButtons .scientificButton:hover {
  background: #fff;
}

.buttons .advancedButtons .memoryButton {
  background: #eee;
  border: 0;
  color: #000;
  width: 25%;
  font-size: 100%;
  padding-top: 5%;
  padding-bottom: 20%;
}

.buttons .advancedButtons .memoryButton:focus,
.buttons .advancedButtons .memoryButton:hover {
  background: #fff;
}

.buttons .mainButtons .additionalButton {
  background: #ff4625;
  border: 0;
  color: #fff;
}

.buttons .mainButtons .additionalButton:focus,
.buttons .mainButtons .additionalButton:hover {
  background: #ff3815;
}

.buttons .operatorButton:disabled,
.buttons .operatorButton:disabled:hover,
.buttons .additionalButton:disabled,
.buttons .additionalButton:disabled:hover {
  background: #aaa;
  color: #ccc;
}


@media (max-width: 1440px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 10% 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 4.85em;
    height: 3em;
  }
}

@media (max-width: 1280px) {
  .container {
    margin: 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 4.85em;
    height: 3em;
  }
}

@media (max-width: 1024px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 40% 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 4.85em;
    height: 3em;
  }
}

@media (max-width: 830px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 3.9em;
    height: 1.95em;
  }
}

@media (max-width: 780px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 35% 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 3.6em;
    height: 2em;
  }
}

@media (max-width: 740px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 3.5em;
    height: 1.9em;
  }
}

@media (max-width: 670px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 3.1em;
    height: 1.6em;
  }
}

@media (max-width: 640px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 3.05em;
    height: 1.5em;
  }
}

@media (max-width: 600px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.85em;
    height: 1.5em;
  }
}

@media (max-width: 570px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 0 0 0 0;
  }

  .screen input {
    height: 1.5em;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.65em;
    height: 1.2em;
  }
}

@media (max-width: 480px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 100px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.95em;
    height: 2em;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

@media (max-width: 420px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 120px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.65em;
    height: 2em;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

@media (max-width: 380px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 100px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.4em;
    height: 2em;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

@media (max-width: 360px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 100px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2.3em;
    height: 1.5em;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

@media (max-width: 320px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 65px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 2em;
    height: 1.5em;
    padding: 0;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

@media (max-width: 280px) {
  .container {
    margin: 0;
  }

  .calculator {
    margin: 100px 0 0 0;
  }

  .buttons .mainButtons input,
  .buttons .advancedButtons input {
    width: 1.75em;
    height: 1.2em;
    padding: 0;
  }

  .buttons .advancedButtons {
    display: none;
  }

  .buttons {
    flex-direction: column;
  }
}

